--- a/src/assets/styles/components/banner.scss
+++ b/src/assets/styles/components/banner.scss
@@ -10,6 +10,22 @@
         color: rgb(219, 33, 33);
     }
 
+    .mobile-title {
+        display: none;
+        
+
+        @media (max-width: 596px) {
+            display: block;
+        }
+    }
+
+    .desktop-title {
+        
+        @media (max-width: 596px) {
+            display: none;
+        }
+    }
+
     .overlay {
         position: absolute;
         top: 40%;
@@ -20,7 +36,24 @@
             font-size: 72px;
             font-weight: 700;
             text-transform: uppercase;
-            
+            margin: 0px 20px;
+
+            @media (max-width: 558px) {
+                font-size: 42px;
+            }
+        }
+
+        button.mobile {
+            display: none;
+            @media (max-width: 404px) {
+                display: inline-block;
+            }
+        }
+
+        button.desktop {
+            @media (max-width: 404px) {
+                display: none;
+            }
         }
     }
 }
