--- a/src/assets/styles/components/contactus.scss
+++ b/src/assets/styles/components/contactus.scss
@@ -6,6 +6,55 @@
     .container {
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
+
+        .info {
+            @media (max-width: 1200px) {
+                flex-basis: 50%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 74px;
+                // text-align: center;
+
+                h3 {
+                    text-align: center;
+                }
+
+                p {
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+
+                // .section-divider {
+                //     margin-left: auto;
+                //     margin-right: auto;
+                // }
+            }
+        }
+
+        .hours {
+            @media (max-width: 1200px) {
+                flex-basis: 50%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 74px;
+
+                h3 {
+                    text-align: center;
+                }
+
+                table {
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+            }
+        }
+
+        .form {
+            @media (max-width: 1200px) {
+                flex-basis: 100%;
+            }
+        }
 
         h3 {
             color: $text-color;
