--- a/src/assets/styles/components/services.scss
+++ b/src/assets/styles/components/services.scss
@@ -52,7 +52,6 @@
             @media (max-width: 926px) {
                 flex-basis: 100%;
                 flex-grow: 1;
-                align-items: center;
             }
 
             .item {
