--- a/src/assets/styles/global/global.scss
+++ b/src/assets/styles/global/global.scss
@@ -1,3 +1,7 @@
 body {
     margin: 0;
 }
+
+ul {
+    padding-inline-start: 0px;
+}
